Fix bug with sidenav z-index on resources dropdown

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -392,6 +392,11 @@ nav.navbar {
     border-color: rgba(var(--black), 1);
 }
 
+.list-group-item-action:focus,
+.list-group-item-action:hover {
+    z-index: 3;
+}
+
 /* BREADCRUMBS */
 #breadcrumb-container {
     position: sticky !important;
